[gd_scene load_steps=10 format=3 uid="uid://bf7fn1fd14bja"]

[ext_resource type="Script" path="res://gui/hud.gd" id="1_ct85p"]
[ext_resource type="FontFile" uid="uid://b6ol51f5b1c2j" path="res://assets_third_party/font/SPACEBOY.TTF" id="1_oy3r3"]
[ext_resource type="Texture2D" uid="uid://bphwxf2glq4lt" path="res://player/art/Main Ship - Base - Full health.png" id="3_q3kxd"]
[ext_resource type="Texture2D" uid="uid://ddmqdjxeqyta2" path="res://powerups/art/fire_rate.png" id="4_s5lo8"]
[ext_resource type="Texture2D" uid="uid://vm1a4wu22ggv" path="res://powerups/art/fire_type.png" id="5_gmxj4"]
[ext_resource type="Texture2D" uid="uid://cpytiu1cm35o7" path="res://powerups/art/move_speed.png" id="6_qyjsa"]

[sub_resource type="LabelSettings" id="LabelSettings_1nte2"]
font = ExtResource("1_oy3r3")
font_size = 35

[sub_resource type="LabelSettings" id="LabelSettings_gruo8"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_r8bov"]
font_size = 41

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ct85p")

[node name="Score" type="Label" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 17.0
offset_right = 225.0
offset_bottom = 56.0
text = "Score: "
label_settings = SubResource("LabelSettings_1nte2")

[node name="FireType" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 112.0
offset_right = 40.0
offset_bottom = 152.0
rotation = -0.00195458

[node name="FireTypeTexture" type="TextureRect" parent="FireType"]
self_modulate = Color(1, 1, 0, 1)
layout_mode = 0
offset_left = 13.7497
offset_top = 64.0542
offset_right = 222.75
offset_bottom = 304.054
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_gmxj4")

[node name="X" type="Label" parent="FireType"]
layout_mode = 0
offset_left = 64.0
offset_top = 67.0
offset_right = 104.0
offset_bottom = 112.0
text = "x"
label_settings = SubResource("LabelSettings_gruo8")
horizontal_alignment = 1
vertical_alignment = 2

[node name="FireType" type="Label" parent="FireType"]
layout_mode = 0
offset_left = 108.0
offset_top = 58.0
offset_right = 148.0
offset_bottom = 118.0
label_settings = SubResource("LabelSettings_r8bov")
horizontal_alignment = 1
vertical_alignment = 2

[node name="Speed" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 0.109456
offset_top = 168.0
offset_right = 40.1095
offset_bottom = 208.0
rotation = -0.00195458

[node name="SpeedTexture" type="TextureRect" parent="Speed"]
self_modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_left = 13.7497
offset_top = 64.0542
offset_right = 222.75
offset_bottom = 304.054
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_qyjsa")

[node name="X" type="Label" parent="Speed"]
layout_mode = 0
offset_left = 64.0
offset_top = 67.0
offset_right = 104.0
offset_bottom = 112.0
text = "x"
label_settings = SubResource("LabelSettings_gruo8")
horizontal_alignment = 1
vertical_alignment = 2

[node name="Speed" type="Label" parent="Speed"]
layout_mode = 0
offset_left = 108.0
offset_top = 58.0
offset_right = 148.0
offset_bottom = 118.0
text = "
"
label_settings = SubResource("LabelSettings_r8bov")
horizontal_alignment = 1
vertical_alignment = 2

[node name="FireRate" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 56.0
offset_right = 40.0
offset_bottom = 96.0
rotation = -0.00195458

[node name="FireRateTexture" type="TextureRect" parent="FireRate"]
self_modulate = Color(0, 1, 1, 1)
layout_mode = 0
offset_left = 13.7497
offset_top = 64.0542
offset_right = 222.75
offset_bottom = 304.054
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_s5lo8")

[node name="X" type="Label" parent="FireRate"]
layout_mode = 0
offset_left = 64.0
offset_top = 67.0
offset_right = 104.0
offset_bottom = 112.0
text = "x"
label_settings = SubResource("LabelSettings_gruo8")
horizontal_alignment = 1
vertical_alignment = 2

[node name="FireRate" type="Label" parent="FireRate"]
layout_mode = 0
offset_left = 108.0
offset_top = 58.0
offset_right = 148.0
offset_bottom = 118.0
label_settings = SubResource("LabelSettings_r8bov")
horizontal_alignment = 1
vertical_alignment = 2

[node name="Lives" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
rotation = -0.00195458

[node name="LivesTexture" type="TextureRect" parent="Lives"]
layout_mode = 0
offset_left = -2.0
offset_top = 51.0
offset_right = 46.0
offset_bottom = 99.0
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_q3kxd")

[node name="X" type="Label" parent="Lives"]
layout_mode = 0
offset_left = 64.0
offset_top = 67.0
offset_right = 104.0
offset_bottom = 112.0
text = "x"
label_settings = SubResource("LabelSettings_gruo8")
horizontal_alignment = 1
vertical_alignment = 2

[node name="LivesLeft" type="Label" parent="Lives"]
layout_mode = 0
offset_left = 108.0
offset_top = 58.0
offset_right = 148.0
offset_bottom = 118.0
text = "3"
label_settings = SubResource("LabelSettings_r8bov")
horizontal_alignment = 1
vertical_alignment = 2

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.0
grow_horizontal = 2
grow_vertical = 0

[node name="PlayerHealthBar" type="ProgressBar" parent="VBox"]
self_modulate = Color(0, 1, 1, 1)
layout_mode = 2
